优化了性能 以及线程安全方面